--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,39 @@
-name: Lint
+name: Elint
 
-on: pull_request
+on: [pull_request]
 
 jobs:
-  eslint:
+  node_test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          fetch-depth: 1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: rm -f .yarnclean
-      - run: yarn --frozen-lockfile --ignore-engines --ignore-optional --no-bin-links --non-interactive --silent --ignore-scripts --production=false
+          node-version: 16
+          cache: 'npm'
+      - name: Install Node Dependencies
+        run: npm ci
         env:
-          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
-          HUSKY_SKIP_INSTALL: true
-      - uses: tinovyatkin/action-eslint@v1
+          CI: TRUE
+      - name: Test Code Linting
+        run: npm run lint
+      - name: Save Code Linting Report JSON
+        # npm script for ESLint
+        # eslint --output-file eslint_report.json --format json src
+        # See https://eslint.org/docs/user-guide/command-line-interface#options
+        run: npm run lint:report
+        # Continue to the next step even if this fails
+        continue-on-error: true
+      - name: Annotate Code Linting Results
+        uses: ataylorme/eslint-annotate-action@v2
         with:
-          repo-token: ${{secrets.GITHUB_TOKEN}}
-          check-name: eslint
+          report-json: "eslint_report.json"
+      # OPTIONAL: save a copy of the usage report for download or use in another job
+      # - name: Upload ESLint report
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: eslint_report.json
+      #     path: eslint_report.json
+      #     retention-days: 5
