--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,12 @@
-name: Elint
+name: Lint
 
 on: [pull_request]
 
 jobs:
-  node_test:
+  eslint:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
         with:
-          node-version: 16
-          cache: 'npm'
-      - name: Install Node Dep
-        run: npm i
-      - name: Install Node Dependencies
-        run: npm ci
-        env:
-          CI: TRUE
-      - name: Test Code Linting
-        run: npm run lint
-      - name: Save Code Linting Report JSON
-        # npm script for ESLint
-        # eslint --output-file eslint_report.json --format json src
-        # See https://eslint.org/docs/user-guide/command-line-interface#options
-        run: npm run lint:report
-        # Continue to the next step even if this fails
-        continue-on-error: true
-      - name: Annotate Code Linting Results
-        uses: ataylorme/eslint-annotate-action@v2
-        with:
-          report-json: "eslint_report.json"
-      # OPTIONAL: save a copy of the usage report for download or use in another job
-      # - name: Upload ESLint report
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: eslint_report.json
-      #     path: eslint_report.json
-      #     retention-days: 5
+          files: src/
