--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 16
           cache: 'npm'
       - name: Install Node Dependencies
-        run: npm ci
+        run: npm i
         env:
           CI: TRUE
       - name: Test Code Linting
