--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     },
     "plugins": ["react", "react-hooks"],
     "rules": {
+      "react/react-in-jsx-scope":0
     },
       "settings": {
         "react": {
