--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .  --ext .js",
+    "lint": "eslint ./",
     "lint:report": "eslint --output-file eslint_report.json --format json src"
   },
   "eslintConfig": {
