--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./",
-    "lint:report": "eslint --output-file eslint_report.json --format json src"
+    "lint:report": "eslint --output-file eslint_report --no-color src"
   },
   "eslintConfig": {
     "extends": [
