--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the changed files back to the repository.
       contents: write
 
     steps:
@@ -23,15 +22,8 @@ jobs:
         run: npm i
         env:
           CI: TRUE
-      - name: Test Code Linting
-        run: npm run lint
-        continue-on-error: true
-      - name: Save Code Linting Report JSON
-        # npm script for ESLint
-        # eslint --output-file eslint_report.json --format json src
-        # See https://eslint.org/docs/user-guide/command-line-interface#options
+      - name: Save Linting Report
         run: npm run lint:report
-        # Continue to the next step even if this fails
         continue-on-error: true
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
