--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
           CI: TRUE
       - name: Test Code Linting
         run: npm run lint
-        continue-on-error: true
-      - name: Save Linting Report 
-        run: npm run lint:report
-        continue-on-error: true
-      - uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Apply LINT REPORT changes
+      #   continue-on-error: true
+      # - name: Save Linting Report 
+      #   run: npm run lint:report
+      #   continue-on-error: true
+      # - uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     commit_message: Apply LINT REPORT changes
