--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,30 @@
-name: Example NodeJS Workflow
-on: [pull_request]
+name: Lint
+
+on:
+  # Trigger the workflow on push or pull request,
+  # but only for the main branch
+  pull_request:
+    branches:
+      - dev
+
 jobs:
-  node_test:
+  run-linters:
+    name: Run linters
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
           node-version: 16
-          cache: 'npm'
-      - name: Install Node Dependencies
+
+      - name: Install Node.js dependencies
         run: npm i
-        env:
-          CI: TRUE
-      - name: Test Code Linting
-        run: npm run lint
-        #  continue-on-error: true
-      # - name: Save Linting Report 
-      #   run: npm run lint:report
-      #   continue-on-error: true
-      # - uses: stefanzweifel/git-auto-commit-action@v5
-      #   with:
-      #     commit_message: Apply LINT REPORT changes
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true
