--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,9 @@ on:
   pull_request:
     branches:
       - dev
-
+permissions:
+  checks: write
+  contents: write
 jobs:
   run-linters:
     name: Run linters
